src/styles/globals.css
*,
*::before,
*::after {
  box-sizing: border-box;
  font-family: inherit;
}

html {
  scrollbar-width: none;
}

body {
  scrollbar-width: none;
  margin: 0;
  color: var(--text-1);
  background-color: var(--bg-body);
  text-rendering: optimizeLegibility;
  scrollbar-color: var(--bg-scrollbar);
  -webkit-font-smoothing: antialiased;
  scroll-behavior: smooth;
}

a {
  text-decoration: none;
  color: inherit;
  font-weight: 500;
}

strong>a {
  font-weight: 700;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: var(--text);

  &>* {
    font-size: inherit !important;
  }
}

h1 {
  font-size: 28px;
}

h2 {
  font-size: 22px;
}

h3 {
  font-size: 20px;
}

h4,
h5,
h6 {
  font-size: 18px;
}

::-webkit-scrollbar-track {
  background-color: transparent;
}

::-webkit-scrollbar-thumb {
  border-radius: 4px;
  background-color: var(--bg-scrollbar);
}

::-webkit-scrollbar-corner {
  background-color: transparent;
}

::-webkit-scrollbar {
  width: 6px;
  height: 6px;
}

:where(html, body)::-webkit-scrollbar {
  appearance: none;
  width: 0;
  height: 0;
  scrollbar-width: none;
}

/* list */
ol,
ul {
  margin-top: 6px;
  padding-left: 28px;
  line-height: 28px;

  &>li {
    padding-left: 4px;
  }
}

p {
  margin: 16px 0;
  word-break: break-all;
}

strong,
em {
  color: var(--text);
}

img {
  -webkit-tap-highlight-color: transparent;
}

svg {
  display: block;
  width: 1em;
  height: 1em;
  fill: currentColor;
}


button,
a[data-type='button'] {
  outline: none;
  background-color: inherit;
  color: inherit;
  cursor: pointer;
  padding: 6px 8px;
  border: 1px solid var(--divider);
  border-radius: 8px;
  transition: background-color 0.15s;
  font-size: var(--text-sm);

  &:hover {
    background-color: var(--c-gray-soft);
  }

  &[data-disabled='true'] {
    background-color: var(--c-gray-3);
    color: var(--text-4);
    pointer-events: none;
  }
}

textarea {
  width: 100%;
  max-width: 100%;
  min-width: 100%;
  height: 100px;
  outline: none;
  border: 1px solid var(--divider);
  border-radius: 6px;
  padding: 8px;
  font-size: 14px;
  transition: border-color 0.15s;
  background-color: var(--bg-body);

  &:focus {
    border-color: var(--c-indigo-3);
  }
}

